load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "metrics",
    srcs = glob(["*.java"]),
    deps = [
        artifact("com.fasterxml.jackson.core:jackson-annotations"),
        artifact("io.dropwizard:dropwizard-core"),
        artifact("io.dropwizard:dropwizard-jersey"),
        artifact("jakarta.ws.rs:jakarta.ws.rs-api"),
    ],
    visibility = [
        "//src/test/java:__subpackages__",
    ],
)
